[package]
name = "rust-rest"
version = "0.1.0"
#workspace = "./"

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sql_lexer = "0.9.1"
toml = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["uuid", "json"]

[dependencies.postgres]
version = "*"
features = ["with-uuid", "with-serde_json"]

[dependencies.uuid]
version = "*"
features = ["serde"]

#[dependencies.rocket_contrib]
#path = contrib
#default-features = false
#features = ["json"]
